# bilidanmu

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PROJECT_PLAN.md  components.json  package-lock.json  package.json  readme.md  tailwind.config.ts  vite.config.ts
.github/workflows/: publish-tauri.yml
docs/: api.md  architecture.md  design.md  research.md  roadmap.md
src/: App.tsx  index.css  index.html  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai_store.rs  credential_store.rs  db.rs  emoticon_store.rs  lib.rs  main.rs  room_store.rs  selections_store.rs  settings_store.rs  tray.rs
src-tauri/src/bili/: api.rs  buvid.rs  credential.rs  mod.rs  protocol.rs  rate_limiter.rs  wbi.rs  ws_client.rs
src-tauri/src/commands/: ai.rs  auth.rs  danmaku.rs  mod.rs  proxy.rs  room.rs  selections.rs  settings.rs  stt.rs  websocket.rs
src-tauri/src/models/: account.rs  ai.rs  message.rs  mod.rs  response.rs  room.rs  settings.rs  stream.rs
src-tauri/src/proxy/: mod.rs  stream_proxy.rs
src-tauri/src/stt/: flv_demux.rs  mod.rs  pipeline.rs
src/components/danmaku/: AutoSendPanel.tsx  BottomActivityBar.tsx  DanmakuMessageItem.tsx  EmoticonPickerPanel.tsx  InlineEmotText.tsx  LikeButton.tsx  LoopSenderPanel.tsx  SubtitleOverlay.tsx  SuperChatCard.tsx
src/components/layout/: AppHeader.tsx  AppLayout.tsx  AppSidebar.tsx
src/components/ui/: PageTabs.tsx  ProxiedImage.tsx
src/hooks/: useAudioPlayer.ts  useAuth.ts  useAutoLike.ts  useAutoSend.ts  useDanmaku.ts  useDanmakuStream.ts  useDividerDrag.ts  useProxyImage.ts  useRoom.ts  useScheduler.ts  useSttTranscript.ts  useTauriEvent.ts  useTheme.ts
src/lib/: constants.ts  tauri.ts
src/pages/: AIPage.tsx  AccountPage.tsx  DanmakuPage.tsx  RoomPage.tsx  SettingsPage.tsx
src/stores/: ai-store.ts  auth-store.ts  danmaku-store.ts  room-store.ts  settings-store.ts
src/types/: bilibili.ts  config.ts  danmaku.ts
