[package]
name = "bilidanmu"
version = "0.1.2"
description = "B站直播间弹幕发送客户端"
authors = ["OpenCode"]
edition = "2021"

[lib]
name = "bilidanmu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
brotli = "7"
flate2 = "1"
md-5 = "0.10"
rand = "0.8"
url = "2.5"
log = "0.4"
thiserror = "2"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = "symbols"
